--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World
+---
+layout: index
+---
+
+<div id="bg">
+  <img src="/images/kiss.jpg" />
+</div>
+<div class="container">
+  <section class="content">
+    <h1>In Memory of Izumi Ejima</h1>
+    <h2>江島以都美を偲んで</h2>
+
+    <p><a class="button hvr-grow" href="home.html">Enter</a></p>
+
+    <p>Created by Kenn Ejima</p>
+  </section>
+</div>
