--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 ---
-layout: index
 ---
 
 <div id="bg">
@@ -10,7 +9,7 @@ layout: index
     <h1>In Memory of Izumi Ejima</h1>
     <h2>江島以都美を偲んで</h2>
 
-    <p><a class="button hvr-grow" href="home.html">Enter</a></p>
+    <p><a class="button hvr-grow" href="/home/">Enter</a></p>
 
     <p>Created by Kenn Ejima</p>
   </section>
