--- a/home/index.html
+++ b/home/index.html
@@ -1,8 +1,8 @@
 ---
 ---
 
-<div id="bg">
-  <img src="/images/valley_of_fire.jpg" />
+<div class="bg full">
+  <img src="/images/mandarin_oriental_dark.jpg" />
 </div>
 <div class="container">
   <blockquote>
@@ -34,8 +34,11 @@
       今は以都美のことを記憶してくれている人と思い出を語り合うことが何よりの慰めです。
     </p>
     <p>
-      Flickr上に写真集を作成中ですので、もし皆様やお知り合いのなかに以都美の写真や動画などをお持ちの方がいらっしゃったら以下までお寄せください。<a href="https://www.flickr.com/gp/kennejima/8C9mfx">写真集</a>
+      Flickr上に写真集を作成中ですので、もし皆様やお知り合いのなかに以都美の写真や動画などをお持ちの方がいらっしゃったら以下までお寄せください。
     <p>
+    <p>
+      <a href="/para/">写真はこちらから</a>
+    </p>
     <p>769-2302 香川県さぬき市長尾西1737-3</p>
     <p>{% include email.html %}</p>
     <p>江島健太郎</p>
