--- a/para/index.html
+++ b/para/index.html
@@ -4,14 +4,16 @@
 <div class="parallax">
     <div id="group1" class="parallax__group">
       <div class="parallax__layer parallax__layer--base">
+        <!-- <img src="/images/santa_cruz_l.jpg" /> -->
         <!-- <div class="title">Base Layer</div> -->
-        <div class="title">Andrea's</div>
+        <div class="title">Santa Cruz</div>
       </div>
     </div>
     <div id="group2" class="parallax__group">
       <div class="parallax__layer parallax__layer--base">
+      <!-- <img src="/images/andreas_l.jpg" /> -->
         <!-- <div class="title">Base Layer</div> -->
-        <div class="title">Santa Cruz</div>
+        <div class="title">Andrea's</div>
       </div>
       <div class="parallax__layer parallax__layer--back">
         <!-- <div class="title">Background Layer</div> -->
@@ -63,17 +65,5 @@
         <div><a class="button moreonflickr" href="https://www.flickr.com/gp/kennejima/8C9mfx">More on Flickr</a></div>
       </div>
     </div>
-  </div>
-
-<div class="container">
-  <div class="layer_base">
-    <div class="content">
-      Foo Bar
-    </div>
-  </div>
-  <div class="layer_back">
-    <img src="/images/andreas_l.jpg" />
-    <img src="/images/arizona_capitol_l.jpg" />
-    <img src="/images/castle_lake.jpg" />
   </div>
 </div>
