--- a/para/index.html
+++ b/para/index.html
@@ -62,7 +62,7 @@
       <div class="parallax__layer parallax__layer--base">
         <!-- <div class="title">Base Layer</div> -->
         <div class="title">Castle Lake</div>
-        <div><a class="button moreonflickr" href="https://www.flickr.com/gp/kennejima/8C9mfx">More on Flickr</a></div>
+        <div><a class="button moreonflickr" href="https://www.flickr.com/photos/kennejima/albums/72157658211245832">More on Flickr</a></div>
       </div>
     </div>
   </div>
