--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <img src="/images/kiss.jpg" />
 </div>
 <div class="container">
-  <section class="content">
+  <section class="top">
     <h1>In Memory of Izumi Ejima</h1>
+  </section>
+  <section class="bottom">
     <h2>江島以都美を偲んで</h2>
-
     <p><a class="button hvr-grow" href="/home/">Enter</a></p>
-
     <p>Created by Kenn Ejima</p>
   </section>
 </div>
