--- a/home/index.html
+++ b/home/index.html
@@ -2,8 +2,10 @@
 ---
 
 <div class="container">
-  <div class="bg section">
-    <img src="/images/french_laundry_2048.jpg">
+  <div class="bg-wrapper">
+    <div class="bg section">
+      <img src="/images/french_laundry_2048x1024.jpg">
+    </div>
   </div>
   <section>
     <div class="content">
