--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 ---
 
 <div class="bg full">
-  <img src="/images/kiss.jpg" />
+  <img src="/images/kiss_2048.jpg" />
 </div>
 <div class="container">
   <table>
