--- a/home/index.html
+++ b/home/index.html
@@ -9,12 +9,14 @@
   </div>
   <section>
     <div class="content">
-      <p>
-        My wife, Izumi Ejima, after 8 months of battle against cancer, passed away on September 6th, 2015.
-      </p>
-      <p>
-        If you have anything to share about her, please contact me at {% include email.html %}. Photos or any forms of remembrance are appreciated.
-      </p>
+      <div class="serif">
+        <p>
+          My wife, Izumi Ejima, after 8 months of battle against cancer, passed away on September 6th, 2015.
+        </p>
+        <p>
+          If you have anything to share about her, please contact me at {% include email.html %}. Photos or any forms of remembrance are appreciated.
+        </p>
+      </div>
       <p>
         妻、江島以都美（旧姓名：古賀以都美）は、病気の発覚から8ヶ月の闘病の末、2015年9月6日に他界しました。享年40歳でした。
       </p>
