--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <tr>
       <td>
         <h1>Izumi Ejima</h1>
-        <h2>1975 &mdash; 2015</h2>
+        <h2>1975 &ndash; 2015</h2>
         <p><a class="button hvr-grow" href="/home/">Enter</a></p>
       </td>
       <td>
