--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <div class="container">
   <table>
     <tr>
-      <td>
+      <td class="left">
         <h1>Izumi Ejima</h1>
         <h2>1975 &ndash; 2015</h2>
         <p><a class="button hvr-grow" href="/home/">Enter</a></p>
