Revise home page.

--- a/home/index.html
+++ b/home/index.html
@@ -2,51 +2,106 @@
 ---
 
 <div class="container">
-  <div class="bg-wrapper">
-    <div class="bg section">
-      <img src="/images/french_laundry_2048.jpg">
-    </div>
-  </div>
-  <section>
-    <div class="content">
-      <div class="serif">
+  <div class="table">
+    <div class="table-cell">
+      <div class="table-cell-inner">
+        <h2>江島以都美を偲んで</h2>
         <p>
-          My wife, Izumi Ejima, after 8 months of battle against cancer, passed away on September 6th, 2015.
+          妻・江島以都美（旧姓名：古賀以都美）は、2015年9月6日にその生涯を閉じました。享年40歳でした。
         </p>
         <p>
-          If you have anything to share about her, please contact me at {% include email.html %}. Photos or any forms of remembrance are appreciated.
+          私たちは京都の大学に通い始めてすぐの頃に出会ってから、人生の半分以上となる21年間の何もかもを一緒に見、聞き、経験してきました。私にとって彼女の存在はあまりに大きく、人生の伴侶というよりも人生の全てでした。
+        </p>
+        <p>
+          そんな以都美のまぶしい笑顔をいつでも見られる場所が欲しくて、そして特別な存在であった彼女に捧げることのできる手作りの供養方法はないかと考えて、この追悼サイトを作ることにしました。
+        </p>
+        <p>
+          お便りは以下までお寄せください。
+        </p>
+        <p>
+          769-2302 香川県さぬき市長尾西1737-3<br />
+          {% include email.html %}<br />
+          江島健太郎
         </p>
       </div>
-      <p>
-        妻、江島以都美（旧姓名：古賀以都美）は、病気の発覚から8ヶ月の闘病の末、2015年9月6日に他界しました。享年40歳でした。
-      </p>
-      <p>
-        本人の希望により、4月の再発後のことはごく一部の人以外には詳細を伏せておりましたので、<a href="http://ovarian.hatenablog.com">闘病ブログ</a>をみて元気になったものと思われていた方にとっては突然のご報告となってしまったことをお許し下さい。
-      </p>
-      <p>
-        存命中、お世話になった病院のスタッフのみなさま、無理なお願いにもかかわらずご協力いただいた方々、毎日のように応援メッセージを送ったり香川県までお見舞いにきてくださったご友人のみなさま、本人に代わりまして厚くお礼申し上げます。
-      </p>
-      <p>
-        また葬儀後、悲嘆に暮れる私のためにやさしい言葉をかけてくださったり、お花やお供え物を贈っていただいたり、遠方からなぐさめに来てくださった方まで、たくさんの方々に支えていただいております。
-      </p>
-      <p>
-        色々とお伝えしたいことがあるのですが、まだ言葉になりません。私にとって以都美の存在はあまりに大きく、人生の伴侶というより人生の全てでした。ともに過ごした時間は互いの生家の家族よりも長く、高校を卒業して京都の大学に通い始めてすぐの頃に出会ってからの21年間の何もかもを一緒に見、聞き、経験してきました。
-      </p>
-      <p>
-        毎日欠かさず詳細につけてきた闘病中の日々の記録も手元にあり、以都美の後半生すべてを最後の一呼吸まで見届けた者の責務として、近日中にこのサイトでまとめたいと思っています。このミッションだけが、いまの私を現世につなぎとめているものです。つらい記憶ですが、愛に満ちた濃厚な日々でもありました。
-      </p>
-      <p>
-        今は以都美とともに過ごした日々について、思い出の引き出しを開けていくことが何よりの慰めです。
-      </p>
-      <p>
-        Flickr上に写真集を作成中ですので、もし皆様やお知り合いのなかに以都美の写真や動画などをお持ちの方がいらっしゃったら以下までお寄せください。
-      <p>
-      <p>
-        <a href="/para/">写真はこちらから</a>
-      </p>
-      <p>769-2302 香川県さぬき市長尾西1737-3</p>
-      <p>{% include email.html %}</p>
-      <p>江島健太郎</p>
     </div>
-  </section>
+    <div class="photo-frame-cell">
+      <div class="photo-frame">
+        <img src="/images/san_jose_1024.jpg" />
+      </div>
+    </div>
+  </div>
+
+  <div class="table">
+    <div class="photo-frame-cell">
+      <div class="photo-frame">
+        <img src="/images/santa_cruz_1024.jpg" />
+      </div>
+    </div>
+    <div class="table-cell">
+      <div class="table-cell-inner">
+        <h2>闘病記</h2>
+        <p>
+          2015年1月に卵巣がんの告知を受け、病気との戦いが始まりました。同年9月6日に生涯を閉じるまでの8ヶ月間の、妻を支える夫の視線からの記録です。つらい記憶ですが、愛に満ちた濃厚な日々でもありました。（11月中に完成予定）
+        </p>
+        <div class="buttons">
+          <p>
+            <a href="http://ovarian.hatenablog.com/" class="button hvr-grow">ある卵巣がん患者配偶者の記録</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="table">
+    <div class="table-cell">
+      <div class="table-cell-inner">
+        <h2>写真集</h2>
+        <p>
+          写真共有サイトのFlickrには、私たちが付き合い始めた学生時代からの21年間に撮りためた35,000枚以上の写真がアップされています。家族限定公開の写真が多かったのですが、以都美の生きた証が偲ばれるよう、できるかぎり誰でも見られるように変更しました。
+        </p>
+        <div class="buttons">
+          <p>
+            <a href="https://www.flickr.com/photos/kennejima/sets/72157658211245832" class="button hvr-grow">ベストショット集</a>
+          </p>
+          <p>
+            <a href="https://www.flickr.com/photos/kennejima/sets/72157658546857108" class="button hvr-grow">スナップショット集</a>
+          </p>
+          <p>
+            <a href="https://www.flickr.com/photos/kennejima/tags/izumi/" class="button hvr-grow">Izumiタグのついた全写真集</a>
+          </p>
+          <p>
+            <a href="https://www.flickr.com/photos/kennejima/archives" class="button hvr-grow">アーカイブ年代別</a>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="photo-frame-cell">
+      <div class="photo-frame">
+        <img src="/images/santana_row_1024.jpg" />
+      </div>
+    </div>
+  </div>
+
+  <div class="table">
+    <div class="photo-frame-cell">
+      <div class="photo-frame">
+        <img src="/images/santa_cruz_pier_1024.jpg" />
+      </div>
+    </div>
+    <div class="table-cell">
+      <div class="table-cell-inner">
+        <h2>くるみブログ</h2>
+        <p>
+          以都美は、カニンヘンダックスフンドの「くるみ」を溺愛していました。2007年2月から2009年11月まで、日本の家族へアメリカでの暮らしぶりを伝える手段として、くるみの写真1枚とタイトルだけのシンプルなブログを毎日更新することにしていたのでした。
+        </p>
+        <div class="buttons">
+          <p>
+            <a href="http://d.hatena.ne.jp/qoo-chan" class="button hvr-grow">くるみのサンフラン生活</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
