--- a/home/index.html
+++ b/home/index.html
@@ -42,7 +42,7 @@
       <div class="table-cell-inner">
         <h2>闘病記</h2>
         <p>
-          2015年1月に卵巣がんの告知を受け、病気との戦いが始まりました。同年9月6日に生涯を閉じるまでの8ヶ月間の、妻を支える夫の視線からの記録です。つらい記憶ですが、愛に満ちた濃厚な日々でもありました。（11月中に完成予定）
+          2015年1月に卵巣がんの告知を受け、病気との戦いが始まりました。同年9月6日に生涯を閉じるまでの8ヶ月間の、妻を支える夫の視線からの記録です。つらい記憶ですが、愛に満ちた濃厚な日々でもありました。
         </p>
         <div class="buttons">
           <p>
@@ -100,6 +100,14 @@
             <a href="http://d.hatena.ne.jp/qoo-chan" class="button hvr-grow">くるみのサンフラン生活</a>
           </p>
         </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="table" style="margin: 160px 0">
+    <div class="photo-frame-cell">
+      <div class="photo-frame">
+        <img src="/images/three.png" style="max-width: 50%"/>
       </div>
     </div>
   </div>
