--- a/home/index.html
+++ b/home/index.html
@@ -104,12 +104,14 @@
     </div>
   </div>
 
-  <div class="table" style="margin: 160px 0">
+  <div class="table">
     <div class="photo-frame-cell">
-      <div class="photo-frame">
-        <img src="/images/three.png" style="max-width: 50%"/>
+      <div class="photo-frame three">
+        <img src="/images/three.png"/>
       </div>
     </div>
   </div>
+
+  <div class="credit">Thanks to Kaho-chan</div>
 
 </div>
